# ipn

./: .gitignore  CMakeLists.txt  README.md
example/: ReqRep.proto  message.hpp  req_rep.hpp
example/client/: CMakeLists.txt  client  main.cpp
example/monitoring/: CMakeLists.txt  main.cpp  monitoring
example/publisher/: CMakeLists.txt  main.cpp  publisher
example/server/: CMakeLists.txt  main.cpp
example/service/: CMakeLists.txt  main.cpp  service
example/subscriber/: CMakeLists.txt  main.cpp  subscriber
include/: client.hpp  ipn.hpp  server.hpp
include/ipn/: client.hpp  constant.hpp  error.hpp  packable_message.hpp  publisher.hpp  req_rep.hpp  service.hpp  subscriber.hpp
src/: client.cpp  server.cpp
